                            -) new output file 'BestModel_out.txt', with the model outputs corresponding to the best parameter set. 
                               Only available when 'fn.name=="hydromod"'
                            -) new 'normalise' parameter for the 'control' variable, in order to improve the performance when the search space is not 
                               a hypercube
                            -) normalised swarm radius now it is computed using the median distance of all the particles  the global best, instead of using the maximum distance
                               (as proposed in Evers and Ghalia 2009). This was done in order to make easier the identification of the stagnation point for activating regrouping
                            -) when 'use.RG=TRUE', the default values for 'RG.thr', 'RG.r', and 'RG.miniter' were changed (related to the change in the computation of swarm 
                               radius), from 1.1E-4, 0.8 and 5 to 1E-5, 2 and 100, respectively
                            -) argument 'method' now allows the following 3 new values: 'spso2007', 'spso2011' and 'canonical', which set the values of the PSO 
                               engine to the ones of the SPSO 2007, SPSO 2011 and the canonical one, respectively. 
                            -) argument 'method'. The old (default) value 'pso' was replaced by the new (default) value 'spso2011'
                            -) argument 'Vini.type' now allows 2 new values for setting the initial velocity of the particles according to the equation 
                               specified in the SPSO 2011: 'random2011' and 'lhs2011', which use a uniform distribution or with a Latin-hypercube 
                               sampling, respectively.
                            -) argument 'Vini.type'. The old values 'random' and 'lhs' were replaced by 'random2007' and 'lhs2007', in order to make 